// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<a
  aria-label="Default"
  class="group inline-flex min-w-[64px] sm:min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-black material-symbols-outlined size-48 group- flex size-[64px] select-none items-center justify-center self-center rounded-full bg-bg-gray hover:text-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-black group-hover:text-accent group-hover:underline"
  >
    Default
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<a
  aria-label="Disabled, nonselected"
  class="group inline-flex min-w-[64px] sm:min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-black material-symbols-outlined size-48 group- flex size-[64px] select-none items-center justify-center self-center rounded-full bg-bg-gray hover:text-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-black group-hover:text-accent group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<a
  aria-label="Disabled, nonselected"
  class="group inline-flex min-w-[64px] sm:min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 group- flex size-[64px] select-none items-center justify-center self-center rounded-full bg-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<a
  aria-label="Disabled, nonselected"
  class="group inline-flex min-w-[64px] sm:min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 group- flex size-[64px] select-none items-center justify-center self-center rounded-full bg-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > selected 1`] = `
<a
  aria-label="Selected"
  class="group inline-flex min-w-[64px] sm:min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 group- flex size-[64px] select-none items-center justify-center self-center rounded-full bg-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Selected
  </span>
</a>
`;
